--- a/Recommendation/Recommendation/Recommendation.csproj
+++ b/Recommendation/Recommendation/Recommendation.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MovieRank.cs" />
+    <Compile Include="Ranker.cs" />
+    <Compile Include="UserRank.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
