--- a/Recommendation/Recommendation/Recommendation.csproj
+++ b/Recommendation/Recommendation/Recommendation.csproj
@@ -55,7 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="MovieRank.cs" />
+    <Compile Include="MovieParams.cs" />
     <Compile Include="Ranker.cs" />
     <Compile Include="UserRank.cs" />
     <Page Include="MainWindow.xaml">
